Add changes in mappers and controllers